# OriginPlatform

./: .gitignore  CMakeLists.txt  README.md
cmake/Darwin/: os_variable_def.cmake
cmake/Linux/: os_variable_def.cmake
cmake/Windows/: os_variable_def.cmake
script/: build.sh  project_config.sh  run.sh
src/: CMakeLists.txt
src/c_log_print/: c_log_print.c  c_log_print.h  c_platform_time.c  c_platform_time.h
src/file_parser/: file_parser.c  file_parser.h
src/inc/: platform_public_macro.h  platform_public_typedef.h  public_macro.h  public_typedef.h
src/log_print/: CMakeLists.txt  log_print.c  log_print.cpp  log_print.h  log_public_def.h
src/module_log_print/: module_log_print.cpp  module_log_print.h
src/num_string_format_manager/: CMakeLists.txt  num_string_format_manager.cpp  num_string_format_manager.h
src/platform_basic_func/: platform_time.c  platform_time.cpp  platform_time.h
src/src/: string_public_func.cpp
src/string_public_func/: string_public_func.cpp  string_public_func.h
test/: CMakeLists.txt
test/test_num_string_format_manager/: CMakeLists.txt  test_num_string_format_manager.cpp
tests/: CMakeLists.txt  main.cpp
tests/src/: CMakeLists.txt  main.cpp
tests/src/test_num_string_format_manager/: CMakeLists.txt  test_num_string_format_manager.cpp  test_num_string_format_manager.h
tests/test_num_string_format_manager/: CMakeLists.txt  test_num_string_format_manager.cpp  test_num_string_format_manager.h
